# AI-Powered-Code-Review-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  ai-review.yml  ai_reviewer.py  ast_analyzer.py  docker-compose.yml  index.html  main.py  pyproject.toml  test_ast_analyzer.py  tests.yml
backend/: ai_reviewer.py  ast_analyzer.py  main.py  models.py
cli/: review.py
examples/: vulnerable_app.py
tests/: test_ast_analyzer.py
