[project]
name = "ai-code-reviewer"
version = "1.0.0"
description = "Automated code review combining AST static analysis with a free LLM (Groq)"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
exclude = ["frontend", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
